<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Patient App</string>
    <string name="categories">အမျိုးအစား</string>
    <string name="chat">ချိန်းဆိုမှုများ</string>

    <string name="recent_consultation">မကြာသေးခင်က ဆွေးနွေးမှုများ</string>
    <string name="disease_categories">ရောဂါအမျိုးအစားများ</string>
    <string name="consultation_confirm_title">ဆွေးနွေးမှု အတည်ပြုချက်</string>
    <string name="consultation_confirm_message">%s ဆရာဝန်နှင့် တိုင်ပင်ဆွေးနွေးရန် Consultation Request ပြုလုပ်မှာ သေချာပါသလား?</string>
    <string name="consultation_confirm">သေချာပါသည်</string>
    <string name="consultation_cancel">မလုပ်တော့ပါ</string>

    <string name="complete_patient_info_title">လူနာအချက်အလက်များဖြည့်ပါ</string>
    <string name="general_questions">အထွေထွေမေးခွန်းများ</string>
    <string name="special_questions">ရောဂါဆိုင်ရာမေးခွန်းများ</string>
    <string name="dob">မွေးနေ့</string>
    <string name="height">အရပ်</string>
    <string name="blood_type">သွေးအမျိုးအစား</string>
    <string name="weight">ပေါင်ချိိန်</string>
    <string name="blood_pressure">သွေးပေါင်ချိန်</string>
    <string name="allergic_prescriptions">မတည့်သောဆေး</string>
    <string name="allergic_prescriptions_text">မတည့်သောဆေး ရှိလျှင် ရေးသားပေးပါ</string>
    <string name="continue_step">ဆက်ရန်</string>
    <string name="patient_name">လူနာအမည်</string>

    <string name="make_appointment">ချိန်းဆိုမှု ပြုလုပ်မည်</string>
    <string name="confirm_info">အချက်အလက်များ အတည်ပြုပေးပါ</string>

    <string name="accepted_request_title">ဆွေးနွေးမှု ပြုလုပ်နိုင်ပါပြီ</string>
    <string name="accepted_request_message">ဆွေးနွေးမှု ပြုလုပ်ရန် %sမှ လက်ခံထားပါသည် ။</string>
    <string name="start_consultation">စတင် ဆွေးနွေးမည်</string>

    <string name="continue_consultation_title">ဆွေးနွေးမှု ဆက်လက်လုပ်ဆောင်နိုင်ပါသည်</string>
    <string name="continue_consultation">ဆက်လက်ဆွေးနွေးမည်</string>

    <string name="consultation_history">ချိန်းဆိုမှု မှတ်တမ်းများ</string>
    <string name="no_profile_info">သင့်ပရိုင်ဖိုင်တွင် အချက်အလက်များ မဖြည့်သွင်းရသေးပါ။</string>
    <string name="fill_in">ဖြည့်မည်</string>

    <string-array name="blood_types">
        <item>O</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
    </string-array>
</resources>