<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivConsultationConfirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:src="@drawable/appt_confirmation"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/consultationConfirmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultation_confirm_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivConsultationConfirm"
        android:padding="@dimen/margin_medium"/>

    <TextView
        android:id="@+id/consultationConfirmMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultation_confirm_message"
        android:textColor="@color/teal"
        android:textAlignment="center"
        android:padding="@dimen/margin_medium_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consultationConfirmTitle"
        app:layout_constraintBottom_toTopOf="@id/consultationConfirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/consultationCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultation_cancel"
        android:layout_margin="@dimen/margin_medium_2"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/consultationConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/consultationConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultation_confirm"
        android:layout_margin="@dimen/margin_medium_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/BlueMaterialButton_round8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>