<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".fragments.CompleteOneTimeQuestionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margin_medium_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal"
            android:text="@string/dob"
            android:padding="@dimen/margin_medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0.9">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/dateOfDob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="23"
                android:textColor="@color/teal"
                app:cornerRadius="@dimen/margin_medium"
                android:drawableEnd="@drawable/ic_arrow_dropdown"
                app:drawableTint="@color/blue"
                app:elevation="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/monthOfDob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="Nov"
                android:textColor="@color/teal"
                app:cornerRadius="@dimen/margin_medium"
                android:drawableEnd="@drawable/ic_arrow_dropdown"
                app:drawableTint="@color/blue"
                app:elevation="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/yearOfDob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="2020"
                android:textColor="@color/teal"
                app:cornerRadius="@dimen/margin_medium"
                android:drawableEnd="@drawable/ic_arrow_dropdown"
                app:drawableTint="@color/blue"
                app:elevation="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/teal"
            android:padding="@dimen/margin_medium"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="@dimen/margin_medium">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/margin_medium_2">
                <EditText
                    android:id="@+id/etHeight"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:inputType="number"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal"
                    android:textStyle="bold"
                    android:text="ft"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal"
            android:text="@string/blood_type"
            android:padding="@dimen/margin_medium"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="@dimen/margin_medium">
            <Spinner
                android:id="@+id/spinnerBloodType"
                android:minHeight="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal"
            android:text="@string/weight"
            android:padding="@dimen/margin_medium"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="@dimen/margin_medium">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/margin_medium_2">
                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:inputType="number"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="lb"
                    android:textColor="@color/teal"
                    android:textStyle="bold"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal"
            android:text="@string/blood_pressure"
            android:padding="@dimen/margin_medium"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="@dimen/margin_medium">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/margin_medium_2">
                <EditText
                    android:id="@+id/etBloodPressure"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:inputType="number"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal"
                    android:textStyle="bold"
                    android:text="mmHg"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergic_prescriptions"
            android:textColor="@color/teal"
            android:padding="@dimen/margin_medium"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="@dimen/margin_medium">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/margin_medium_2">
                <EditText
                    android:id="@+id/etAllergicPrescriptions"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/complete_forms_text_field_height"
                    android:gravity="top"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:hint="@string/allergic_prescriptions_text"
                    android:background="@android:color/transparent" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_step"
            android:drawableEnd="@drawable/ic_arrow_right"
            app:drawableTint="@color/white"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_medium_2"
            style="@style/BlueMaterialButton_round8dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>