<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".fragments.CompleteGeneralQuestionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="@dimen/margin_medium"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginVertical="@dimen/margin_medium">
            <include
                android:id="@+id/vpPatientInfo"
                layout="@layout/viewpod_patient_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium_2"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/teal"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:padding="@dimen/margin_medium"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="@dimen/margin_medium">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/margin_medium_2">
                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:inputType="number"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal"
                    android:textStyle="bold"
                    android:text="lb"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_pressure"
            android:textColor="@color/teal"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:padding="@dimen/margin_medium"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="@dimen/margin_medium">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/margin_medium_2">
                <EditText
                    android:id="@+id/etBloodPressure"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:inputType="number"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal"
                    android:textStyle="bold"
                    android:text="mmHg"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_step"
            android:drawableEnd="@drawable/ic_arrow_right"
            app:drawableTint="@color/white"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_medium_2"
            style="@style/BlueMaterialButton_round8dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>